# BotGoBrrr

./: .gitattributes  .gitignore  Makefile  README.md  build.zig  build.zig.zon  flake.nix  justfile  project.pros  read_port_buffer.zig  zig.mk
.github/workflow/: build-book.yml  pages.yml
.github/workflows/: mdbook.yml
bot_go_brr/: .gitignore  Cargo.toml  README.md  bytecode.md  cal.hs  justfile  record.sh  robot-configs.toml  terminal.sh  upload-debug.sh  upload.sh
bot_go_brr/src/: advlog.rs  algor.rs  auto.rs  autonomous.rs  belt.rs  bot.rs  button.rs  bytecode.rs  config.rs  controller.rs  controls.rs  doinker.rs  drive.rs  drive_train.rs  initialize.rs  lib.rs  log.rs  main.rs  maths.rs  opcontrol.rs  pdguide.md  record.rs  relative.rs  smooth.rs  solenoid.rs  utils.rs
bot_go_brr/src/autonomous/: act.rs  match_auto.brb  match_auton.rs
bot_go_brr/src/drive/: drive_state.rs
drive-controls-tester/: Cargo.toml
drive-controls-tester/src/: config.rs  controls.rs  lib.rs  main.rs
drive_controls/: Cargo.toml
drive_controls/src/: lib.rs
drive_test/: Cargo.toml  flake.nix
drive_test/src/: controls.rs  game.rs  lib.rs  main.rs
include/: api.h  main.h  pros.zig  stub.zig
include/pros/: ext_adi.h  screen.h
logbook/: README.md  book.toml
logbook/src/: SUMMARY.md  info.md
logic/: Cargo.toml
logic/src/: drive.rs  inst.rs  lib.rs  log.rs  magic.rs  odom.rs  pid.rs  pie.rs
maths/: Cargo.toml
maths/src/: lib.rs
robot_sim/: Cargo.toml  flake.nix
robot_sim/.cargo/: config.toml
robot_sim/src/: controls.rs  game.rs  lib.rs  main.rs
src/: .autonomous.zig.kate-swp  Motor.zig  Shadow.zig  auton.cpp  auton.hpp  autonomous.zig  autonomous.zigQKzLNn.bck  bytecode.c  bytecode.h  bytecode_stack.c  bytecode_stack.h  config.c  config.h  controller.zig  controls.c  controls.h  debug_mode.zig  debug_mode_pid.zig  def.zig  donut.c  donut.h  drive.cpp  drive.hpp  drive.zig  logging.zig  main.c  main.cpp  main.zig  major_minor.zig  motor.zig  odom.zig  opcontrol.c  opcontrol.s  opcontrol.zig  pid.zig  port.zig  pure_pursuit.zig  simulation.zig  tower.cpp  tower.hpp  (+3 more)
src/simulation/: State.zig  configs.zig  devices.zig  io.zig  stub.zig
