[package]
name = "bot_go_brr"
version = "5.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_tt = "1.0"

[dependencies.safe-vex]
version = "3.1"
# path = "../../safe-vex"

[features]
record = []
full-autonomous = []

[profile.release]
incremental = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "unwind"
strip = true
debug = false

[profile.dev]
incremental = true
debug = false

[profile.dev.package."*"]
opt-level = 3
