[package]
name = "bot_go_brr"
version = "5.4.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_tt = "1.0"

[dependencies.safe-vex]
version = "3.2"
# path = "../../safe-vex"

[features]
default = ["red"]
record = []
full-autonomous = []
red = [] # competitions as the red alliance
blue = [] # competitions as the blue alliance

[profile.release]
incremental = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "unwind"
strip = true
debug = false

[profile.dev]
incremental = true
debug = false

[profile.dev.package."*"]
opt-level = 3
