[package]
name = "bot_go_brr"
version = "6.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static-toml = "1.2"

# [dependencies.packed_struct]
# version = "0.10"
# default-features = false

[dependencies.maths]
path = "../maths"

[dependencies.logic]
path = "../logic"

[dependencies.safe-vex]
version = "4.2.0"
# path = "/home/kalscium/Github/safe-vex"

[features]
record = []
full-autonomous = []

[profile.release]
incremental = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "unwind"
strip = true
debug = false

[profile.dev]
incremental = true
debug = false

[profile.dev.package."*"]
opt-level = 3
