[package]
name = "drive_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"

[dependencies.bevy]
version = "0.14"
features = [
  "bevy_gilrs",
  "jpeg",
  "wayland",
]

[dependencies.drive_controls]
path = "../drive_controls"

# Enable incremental builds
[profile.dev]
incremental = true

# Maximum optimisations for release code
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
