[package]
name = "robot_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"

[dependencies.bevy_rapier2d]
version = "0.27"
features = [
  "parallel",
  "simd-nightly",
  "debug-render-2d",
]

[dependencies.bevy]
version = "0.14"
features = [
  "bevy_gilrs",
  "jpeg",
  "wayland",
  "dynamic_linking"
]

[dependencies.logic]
path = "../logic"

# Enable incremental builds
[profile.dev]
opt-level = 1

# Maximum optimisations for release code
[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = false
debug = false
